# hvac-app

./: .gitignore  .vimrc  AUTHORS  CMakeLists.txt  README  README.md  config.json.sample
dts/: README.md  rpi-hvac.dts
emu/: gpio.sh  gpio.txt.sample  modbus.txt.sample  watch.sh
include/: board-rpi-bare.h  board-rpi-hvac.h  common.h  gsdata.h  json.h  memcache.h  network.h  telemetry.h
src/: common.h  emulator.c  gsdata.c  json.c  main.c  memcache.c  network.c  telemetry.c
systemd/: hvac.service
web/: index.html
web/css/: index.css  main.css
web/images/: cancel-svgrepo-com.txt  checked-svgrepo-com.txt  clock.txt  down-arrow-arrows-svgrepo-com.txt  drops-water-svgrepo-com.txt  fire-svgrepo-com.txt  flasks.txt  high-bars-svgrepo-com.txt  home-svgrepo-com.txt  low-bars.txt  power-button-green-svgrepo-com.txt  propeller.txt  recirculation-svgrepo-com.txt  settings.txt  snowflake-svgrepo-com.txt  thermometer-svgrepo-com.txt  trees-tree.txt  up-arrow-arrows.txt  water-heater.txt
web/javascript/: index.js
web/js/: main.js
